--- a/public/index.html
+++ b/public/index.html
@@ -37,28 +37,9 @@
       <div id="home-section" class="content-section active">
         <!-- User Profile Section -->
         <div class="user-profile">
-          <img id="user-avatar" src="images/52eabf633ca6414e60a7677b0b917d92-male-avatar-maker.webp" alt="User Avatar" class="avatar">
+          <img id="user-avatar" src="" alt="User Avatar" class="avatar">
           <h2 id="username">Welcome, User!</h2>
           <p id="user-email">Gold Member</p>
-        </div>
-
-        <!-- Top Events Section -->
-        <div class="top-events">
-          <h3>Top Events</h3>
-          <div class="event-list">
-            <div class="event-card">
-              <img src="images/festivalfeat.jpg" alt="Concert 1">
-              <h4>Concert Name 1</h4>
-              <p>Date: 25th Oct 2023</p>
-              <button>Book Now</button>
-            </div>
-            <div class="event-card">
-              <img src="images/How-to-organise-music-concert.jpg" alt="Concert 2">
-              <h4>Concert Name 2</h4>
-              <p>Date: 30th Oct 2023</p>
-              <button>Book Now</button>
-            </div>
-          </div>
         </div>
 
         <!-- Top Artists Section -->
@@ -67,45 +48,23 @@
           <div id="top-artists" class="event-list"></div>
         </div>
 
-        <!-- Book Tickets Section -->
-        <div class="book-tickets">
-          <h3>Book Tickets</h3>
-          <input type="text" placeholder="Search Events...">
+        <!-- Top Tracks Section -->
+        <div class="top-events">
+          <h3>Top Tracks</h3>
+          <div id="top-tracks" class="event-list"></div>
         </div>
 
-        <!-- My Tickets Section -->
-        <div class="my-tickets">
-          <h3>My Tickets</h3>
-          <div class="ticket">
-            <div id="qrcode"></div>
-            <p>Concert Name 1 - 25th Oct 2023</p>
-          </div>
-        </div>
-
-        <!-- Ranking System -->
-        <div class="ranking">
-          <h3>Your Ranking</h3>
-          <p>Priority Level: High</p>
+        <!-- Upcoming Events Section -->
+        <div class="top-events">
+          <h3>Upcoming Events</h3>
+          <div id="upcoming-events" class="event-list"></div>
         </div>
       </div>
 
       <!-- Events Section -->
       <div id="events-section" class="content-section">
         <h2>Upcoming Events</h2>
-        <div class="event-list">
-          <div class="event-card">
-            <img src="images/festivalfeat.jpg" alt="Concert 1">
-            <h4>Concert Name 1</h4>
-            <p>Date: 25th Oct 2023</p>
-            <button>Book Now</button>
-          </div>
-          <div class="event-card">
-            <img src="images/How-to-organise-music-concert.jpg" alt="Concert 2">
-            <h4>Concert Name 2</h4>
-            <p>Date: 30th Oct 2023</p>
-            <button>Book Now</button>
-          </div>
-        </div>
+        <div id="events-list" class="event-list"></div>
       </div>
 
       <!-- My Tickets Section -->
@@ -116,10 +75,6 @@
             <div id="qrcode"></div>
             <p>Concert Name 1 - 25th Oct 2023</p>
           </div>
-          <div class="ticket">
-            <div id="qrcode"></div>
-            <p>Concert Name 2 - 30th Oct 2023</p>
-          </div>
         </div>
       </div>
 
@@ -127,9 +82,9 @@
       <div id="profile-section" class="content-section">
         <h2>Profile</h2>
         <div class="profile-details">
-          <img id="user-avatar" src="images/52eabf633ca6414e60a7677b0b917d92-male-avatar-maker.webp" alt="User Avatar" class="avatar">
-          <h3 id="username">John Doe</h3>
-          <p id="user-email">john.doe@example.com</p>
+          <img id="profile-avatar" src="" alt="User Avatar" class="avatar">
+          <h3 id="profile-name">John Doe</h3>
+          <p id="profile-email">john.doe@example.com</p>
           <p>Member Since: 2022</p>
         </div>
       </div>
